--- a/style.css
+++ b/style.css
@@ -1,62 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-:root {
-    --hue: 10;
-    --bg-color: hsl(var(--hue), 5%, 7%);
-    --text-color: hsl(var(--hue), 40%, 98%);
-    --primary-color: hsl(var(--hue), 100%, 63%);
-    --controls-bg-color: hsl(var(--hue), 0%, 14%);
-    --button-secondary: hsl(var(--hue), 40%, 98%);
-
-    font-size: clamp(40%, 1% + 2vw, 62.5%);
-}
-
-
-html.light {
-    --text-color: hsl(var(--hue), 5%, 7%);
-    --bg-color: hsl(var(--hue), 40%, 98%);
-    --controls-bg-color: hsl(var(--hue), 0%, 14%);
-}
-
-html.light .ph-sun,
-html:not(.light) .ph-moon {
-    display: none;
-}
-
-#toggle-mode {
-    position: absolute;
-    right: 3.2rem;
-    top: 3.2rem;
-    font-size: 3.2rem;
-    line-height: 0;
-    color: var(--text-color);
-}
-
-
-.sr-only {
-    width: 1px;
-    height: 1px;
-    position: absolute;
-    overflow: hidden;
-    margin: -1px;
-    padding: 0px;
-    border: 0;
-    appearance: none;
-}
-
-body {
-background-color: var(--bg-color);
-color: var(--text-color);
-
-display: grid;
-height: 100vh;
-place-content: center;
-}
+@import url(./css/acessibility.css);
+@import url(./css/config.css);
+@import url(./css/controls.css);
+@import url(./css/themes.css);
 
 #app {
     display: grid;
