--- a/css/config.css
+++ b/css/config.css
@@ -7,13 +7,6 @@
 }
 
 :root {
-  --hue: 194;
-  --bg-color: hsl(var(--hue), 5%, 7%);
-  --text-color: hsl(var(--hue), 40%, 98%);
-  --primary-color: hsl(var(--hue), 100%, 63%);
-  --controls-bg-color: hsl(var(--hue), 0%, 14%);
-  --button-secondary: hsl(var(--hue), 40%, 98%);
-
   font-size: clamp(40%, 1% + 2vw, 62.5%);
 }
 
@@ -23,11 +16,8 @@ html {
 }
 
 body {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  
   display: grid;
   height: 100vh;
   place-content: center;
-  }
-  
+  font-family: 'poppins';
+}
