--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url(./css/acessibility.css);
 @import url(./css/config.css);
 @import url(./css/controls.css);
-@import url(./css/themes.css);
+@import url(./css//themes/themes.css);
+@import url(./css//themes/icons.css);
 
 #app {
     display: grid;
@@ -15,38 +16,39 @@
 #timer {
     font-size: 9.6rem;
     font-weight: bold;
-    font-family: sans-serif;
+    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #controls {
     margin-top: 1.6rem;
     padding: 2.2rem 4rem;
     gap: 1.6rem;
-    background-color: var(--controls-bg-color);
     border-radius: 999rem;
-
 }
 
 button {
     background-color: transparent;
     border: 0;
-    color: var(--primary-color);
+    color: inherit;
     cursor: pointer;
     font-size: 6.4rem;
 }
 
-.secondary {
-    color: var(--button-secondary);
+#minutes,
+#seconds {
+    outline: none;
+    border-radius: 24px;
+    padding: .5rem;
+    min-width: 11.7rem;
 }
 
-
-/* controls */
-.running .ph-play-circle,
-.running .ph-timer,
-.music-on .ph-speaker-none,
-html:not(.running) .ph-pause-circle,
-html:not(.running) .ph-stop-circle,
-html:not(.music-on) .ph-speaker-high {
-    display: none;
+.ph,
+.flex,
+body,
+button,
+#minutes,
+#seconds {
+  transition: all .4s ease-in-out;
 }
-
